--- a/index.html
+++ b/index.html
@@ -8,8 +8,27 @@
 </head>
 <body>
     <div id="app"></div>
-    <svg id="animation">    </svg>
+    <svg id="animation"></svg>
     <script src="game.js"></script>
    
+    <!--<a id='buttonLoad' href='#'>[Load]</a>
+        <br />
+        <br />
+        <div>
+            <select id='listBoxMazes' size="5">
+                <option>Maze 1</option>
+                <option>Maze 2</option>
+                <option>Maze 3</option>
+            </select>
+        </div>
+        <div>
+            <div>
+                Name: <input type='text' id='textBoxMazeName' />
+            </div>
+            <div>
+                Data: <input type='text' id='textBoxMazeData' />
+            </div>
+            <a id='buttonAdd' href='#'>[Add]</a>
+        </div>-->
 </body>
 </html>
